k8s/api-gradle/api-gradle-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gradle
  name: api-gradle
  namespace: ubisoft
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: api-gradle
